fix(login): Fix svg overflowing page and not clipping properly

--- a/src/views/login/login.scss
+++ b/src/views/login/login.scss
@@ -20,7 +20,7 @@
     }
 
     .login-fixed-bottom {
-        position: absolute;
+        position: fixed;
         bottom: 0;
         height: 90vh;
         z-index: 0;
